z-index fixes for header

--- a/src/index.less
+++ b/src/index.less
@@ -10,7 +10,7 @@ body {
     background-color: white;
 }
 
-.z-wrapper {
+.header-z-wrapper {
     z-index: 1000;
     position: relative;
     background-color: white;
